fix: corrected font sizes on mobile for better readability

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -18,6 +18,6 @@ $title-font-size-medium-desktop-md: 3.6rem;
 $title-font-size-small-desktop-md: 2.4rem;
 
 // Phone
-$title-font-size-large-phone: 4rem;
+$title-font-size-large-phone: 3.2rem;
 $title-font-size-medium-phone: 3rem;
 $title-font-size-small-phone: 1.8rem;
