--- a/src/styles/components/_about-us-card.scss
+++ b/src/styles/components/_about-us-card.scss
@@ -55,6 +55,10 @@
     @include respond-to(tablet) {
       @include text-size($title-font-size-medium-desktop-md, 46px);
     }
+
+    @include respond-to(phone) {
+      @include text-size($title-font-size-medium-phone, 40px);
+    }
   }
 
   &__description {
