--- a/src/styles/components/_features-list.scss
+++ b/src/styles/components/_features-list.scss
@@ -24,7 +24,7 @@
     @include text-style($text-font-size-large, $font-weight-regular, 24px);
 
     @include respond-to(tablet, phone) {
-      width: 280px;
+      width: 260px;
 
       @include text-size($text-font-size-medium, 22px);
     }
