--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -1,10 +1,7 @@
 .input {
   &--default {
     height: 48px;
-    border: 1px solid #828282;
     padding: 12px 36px;
-
-    @include text-style($text-font-size-large, $font-weight-regular, 24px);
   }
 }
 
@@ -12,13 +9,19 @@
   &--default {
     height: 128px;
     padding: 16px 36px;
-
-    @include text-style($text-font-size-large, $font-weight-regular, 24px);
   }
 }
 
 .input--default,
 .textarea--default {
+  border: 1px solid #828282;
+
+  @include text-style($text-font-size-large, $font-weight-regular, 24px);
+
+  @include respond-to(phone) {
+    padding: 12px 20px;
+  }
+
   &:focus,
   &:valid {
     border: 1px solid #0c797a;
@@ -53,6 +56,7 @@
   }
 
   &__link {
+    text-align: center;
     padding: 16px 42px;
     display: block;
     width: 100%;
