--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -104,7 +104,11 @@ $gap-phone: 110px;
 
     @include respond-to(phone) {
       scroll-margin-top: 10vh;
-      margin: 0 $phone-margin-side;
+      padding: 0 $phone-margin-side;
+    }
+
+    @media (max-width: 500px) {
+      padding: 0;
     }
   }
 
@@ -125,35 +129,6 @@ $gap-phone: 110px;
   }
 }
 
-.contact {
-  &__title {
-    text-transform: uppercase;
-
-    @include text-style(
-      $title-font-size-medium-desktop-lg,
-      $font-weight-bold,
-      70px
-    );
-
-    @include respond-to(tablet, phone) {
-      @include text-size($title-font-size-medium-desktop-md, 46px);
-    }
-  }
-
-  &__form {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__textarea {
-    margin-top: 20px;
-  }
-
-  &__button {
-    margin-top: 30px;
-  }
-}
-
 .features {
   &__content {
     margin-top: 30px;
@@ -168,7 +143,7 @@ $gap-phone: 110px;
 
     @include respond-to(phone) {
       width: 100%;
-      height: 620px;
+      height: 660px;
       margin: 30px auto;
       padding: 30px 0;
     }
@@ -179,7 +154,7 @@ $gap-phone: 110px;
     overflow-x: hidden;
 
     @include respond-to(tablet, phone) {
-      width: 280px;
+      width: 260px;
     }
 
     @include respond-to(phone) {
@@ -206,6 +181,10 @@ $gap-phone: 110px;
       $font-weight-bold,
       70px
     );
+
+    @include respond-to(tablet, phone) {
+      @include text-size($title-font-size-medium-phone, 40px);
+    }
   }
 
   &__img {
@@ -238,7 +217,7 @@ $gap-phone: 110px;
       }
 
       @include respond-to(phone) {
-        top: 370px;
+        top: 420px;
         left: 50%;
         transform: translateX(-50%);
       }
@@ -297,5 +276,38 @@ $gap-phone: 110px;
         #0c797a
       );
     }
+  }
+}
+
+.contact {
+  &__title {
+    text-transform: uppercase;
+
+    @include text-style(
+      $title-font-size-medium-desktop-lg,
+      $font-weight-bold,
+      70px
+    );
+
+    @include respond-to(tablet) {
+      @include text-size($title-font-size-medium-desktop-md, 46px);
+    }
+
+    @include respond-to(phone) {
+      @include text-size($title-font-size-medium-phone, 40px);
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__textarea {
+    margin-top: 20px;
+  }
+
+  &__button {
+    margin-top: 30px;
   }
 }
